Virtualization query param changes
